--- a/DesignContest Theme/style/style.scss
+++ b/DesignContest Theme/style/style.scss
@@ -4,6 +4,7 @@
   padding: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
 $base-color: #ff4444;
 
 @mixin redButton() {
@@ -14,17 +15,21 @@ $base-color: #ff4444;
   background: $base-color;
   color: white;
 }
+@mixin gridSystem($fr, $gap) {
+  display: grid;
+  grid-template-columns: $fr;
+  grid-gap: $gap;
+}
 .contact {
   background: #212121;
   padding: 12px;
   color: lightgray;
   .social {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+    @include gridSystem(1fr 1fr, 20px);
     .column-left {
       text-align: left;
       .social-icons {
+        display: inline-block;
         i {
           padding: 5px;
           &:hover {
@@ -50,6 +55,27 @@ $base-color: #ff4444;
     }
   }
 }
+
+//navigation menu
+
+.navigation {
+  padding: 30px;
+  background-color: #ededed;
+  text-align: center;
+  @include gridSystem(22% 18% 14% 14% 14% 9% 9%, 0);
+  align-items: center;
+  justify-content: center;
+  span {
+    text-transform: uppercase;
+
+    &:hover {
+      color: $base-color;
+    }
+    i {
+      margin-right: 5px;
+    }
+  }
+}
 //Image Section
 .head-image {
   background: url("../resources/cover-image.png");
@@ -57,7 +83,7 @@ $base-color: #ff4444;
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
-  padding: 90px 0 80px 0;
+  padding: 70px 0 80px 0;
   .image-elements {
     text-transform: uppercase;
     padding-top: 50px;
@@ -94,10 +120,7 @@ $base-color: #ff4444;
     padding: 40px 0 20px 0;
   }
   .wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-gap: 40px;
+    @include gridSystem(1fr 1fr 1fr, 40px);
     padding-top: 40px;
     margin-bottom: 50px;
     div {
@@ -129,10 +152,7 @@ $base-color: #ff4444;
 }
 // Banner Section
 .banner {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  grid-gap: 40px;
+  @include gridSystem(1fr 1fr 1fr 1fr, 40px);
   padding: 40px;
   text-align: center;
   background: url("../resources/banner.png");
@@ -176,9 +196,7 @@ $base-color: #ff4444;
     padding: 40px 0 20px 0;
   }
   .workdone {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+    @include gridSystem(1fr 1fr, 20px);
     padding-top: 50px;
     .needworkdone {
       text-align: left;
@@ -186,9 +204,7 @@ $base-color: #ff4444;
         text-transform: uppercase;
       }
       .info {
-        display: grid;
-        grid-template-columns: 60px auto;
-        grid-gap: 20px;
+        @include gridSystem(60px 1fr, 20px);
         padding-top: 70px;
       }
       p {
@@ -204,8 +220,8 @@ $base-color: #ff4444;
   padding: 40px;
   text-align: center;
   .header {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    @include gridSystem(1fr 1fr, 20px);
+
     h2 {
       text-align: left;
     }
@@ -224,9 +240,7 @@ $base-color: #ff4444;
   }
 
   .columns {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    @include gridSystem(1fr 1fr 1fr 1fr, 0);
     margin-bottom: 50px;
     margin-top: 50px;
     .images {
@@ -301,10 +315,7 @@ $base-color: #ff4444;
     padding: 40px 0 40px 0;
   }
   .container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    grid-gap: 30px;
+    @include gridSystem(1fr 1fr, 20px);
     .column-left {
       div {
         background: #ededed;
@@ -379,9 +390,7 @@ $base-color: #ff4444;
 .partners {
   background: #ededed;
   padding: 40px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-gap: 20px;
+  @include gridSystem(1fr 1fr 1fr 1fr 1fr, 20px);
   align-items: center;
   justify-content: center;
   img {
@@ -399,8 +408,9 @@ $base-color: #ff4444;
 
 .coupon {
   padding: 40px;
-  display: grid;
-  grid-template-columns: 40% 50% 10%;
+
+  @include gridSystem(40% 50% 10%, 20px);
+
   align-items: center;
   justify-content: center;
   text-transform: uppercase;
@@ -433,9 +443,7 @@ $base-color: #ff4444;
 // quicklinks, account, about section
 .quicklinks {
   padding: 40px;
-  display: grid;
-  grid-template-columns: 30% 20% 20% 30%;
-  grid-gap: 10px;
+  @include gridSystem(30% 20% 20% 30%, 10px);
   background-color: #ededed;
   .designcontest {
     img {
@@ -569,8 +577,8 @@ $base-color: #ff4444;
   background-color: rgb(82, 82, 82);
   color: lightgray;
   padding: 15px;
-  display: grid;
-  grid-template-columns: 20% 80%;
+
+  @include gridSystem(20% 80%, 0);
   .menu {
     text-align: right;
     span {
@@ -586,7 +594,7 @@ $base-color: #ff4444;
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   /* For tablets */
   .social {
-    grid-template-columns: 1fr !important;
+    @include gridSystem(1fr, 0);
     .column-left {
       text-align: center !important;
     }
@@ -594,36 +602,38 @@ $base-color: #ff4444;
       text-align: center !important;
     }
   }
+  .navigation {
+    display: none;
+  }
   .wrapper {
-    grid-template-columns: 1fr 1fr !important;
-    grid-gap: 10px;
+    @include gridSystem(1fr 1fr !important, 10px);
   }
   .banner {
-    grid-template-columns: 1fr 1fr !important;
+    @include gridSystem(1fr 1fr !important, 0);
   }
   .workdone {
-    grid-template-columns: 1fr !important;
+    @include gridSystem(1fr !important, 0);
   }
   .columns {
-    grid-template-columns: 1fr 1fr !important;
+    @include gridSystem(1fr 1fr !important, 0);
   }
   .coupon {
     text-align: center;
-    grid-template-columns: 1fr;
-    grid-gap: 40px;
+    @include gridSystem(1fr !important, 40px);
+
     .col-3 {
       text-align: center;
     }
   }
   .quicklinks {
-    grid-template-columns: 1fr;
+    @include gridSystem(1fr !important, 0);
+
     .designcontest {
       margin-bottom: 40px;
     }
   }
   .page-end {
-    grid-template-columns: 1fr;
-    grid-gap: 15px;
+    @include gridSystem(1fr !important, 20px);
 
     .rights {
       text-align: center;
@@ -637,7 +647,7 @@ $base-color: #ff4444;
 @media only screen and (min-width: 320px) and (max-width: 767px) {
   /* all mobile resolutions */
   .social {
-    grid-template-columns: 1fr !important;
+    @include gridSystem(1fr !important, 0 );
     .column-left {
       text-align: center !important;
     }
@@ -645,45 +655,49 @@ $base-color: #ff4444;
       text-align: center !important;
     }
   }
+  .navigation {
+    display: none;
+  }
   .wrapper {
-    grid-template-columns: 1fr !important;
-    grid-gap: 10px;
+    @include gridSystem(1fr !important, 0);
   }
   .banner {
-    grid-template-columns: 1fr !important;
+    @include gridSystem(1fr !important, 0);
   }
   .workdone {
-    grid-template-columns: 1fr !important;
+    @include gridSystem(1fr !important, 0);
   }
   .columns {
-    grid-template-columns: 1fr !important;
+    @include gridSystem(1fr !important, 0);
   }
   .container {
-    grid-template-columns: 1fr !important;
+    @include gridSystem(1fr !important, 0);
   }
   .partners {
-    grid-template-columns: 1fr !important;
+    @include gridSystem(1fr !important, 0);
+
     img {
       margin: auto;
     }
   }
   .coupon {
     text-align: center;
-    grid-template-columns: 1fr;
-    grid-gap: 40px;
+    @include gridSystem(1fr !important, 0);
+
     .col-3 {
       text-align: center;
     }
   }
   .quicklinks {
-    grid-template-columns: 1fr;
+    @include gridSystem(1fr !important, 0);
+
     .designcontest {
       margin-bottom: 40px;
     }
   }
   .page-end {
-    grid-template-columns: 1fr;
-    grid-gap: 15px;
+    @include gridSystem(1fr !important, 20px);
+
     .rights {
       text-align: center;
     }
