--- a/MaxStudio Theme/max.css
+++ b/MaxStudio Theme/max.css
@@ -121,15 +121,19 @@ a:hover {
 .circle {
   border: 1px solid orange;
   color: orange;
-  padding: 10 10 10 10;
+  padding: 10px;
   border-radius: 50%;
 }
 .circle2 {
   border: 1px solid white;
   color: orange;
-  padding: 10 10 10 10;
+  height: 40px;
+  width: 40px;
   border-radius: 50%;
-}
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ }
 
 .orange-con {
   background: orange;
